# bitcoin-bank

./: .gitignore  README.md  Readme.md
backend/: .env  index.js  package-lock.json  package.json  sbtc_loan__rust_simulator.node  test_sim.cjs
backend/config/: db.js
backend/controllers/: authController.js  calculatorController.js  cityController.js  collateralController.js  contractController.js  dashboardController.js  investorController.js  loanApplicationController.js  loanController.js  simulatorController.js  transactionController.js
backend/middleware/: auth.js
backend/models/: City.js  Collateral.js  Loan.js  Transaction.js  User.js  Wallet.js  loan.js  loanApplication.js
backend/routes/: auth.js  btcPrice.js  city.js  collateral.js  contract.js  dashboard.js  investor.js  loans.js  transactions.js
backend/scheduledTasks/: liquidationScheduler.js
backend/scripts/: populateCities.js
backend/services/: liquidationService.js  notificationService.js  rewardService.js  rustService.cjs  valuationService.js  walletService.js
backend/simulatorRustModel/: sbtc_loan__rust_simulator_linux.node
contracts/: Clarinet.toml  package-lock.json  package.json
frontend/: package-lock.json  package.json
simulator/sbtc_loan_simulator/: Cargo.toml  package-lock.json  package.json
simulator/sbtc_loan_simulator/src/: build.rs  lib.rs  main.rs
simulator/sbtc_loan_simulator/src/api/: handlers.rs
simulator/sbtc_loan_simulator/src/models/: emi.rs  mod.rs
simulator/sbtc_loan_simulator/src/simulator/: loan_simulation.rs  mod.rs  random_price.rs
(+30 files in other folders)
