[package]
name = "sbtc_loan_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
napi = "2.16.16"
napi-derive = "2.16.13"
napi-sys = "2.4.0"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
napi-build = "2.1.5"

[lib]
crate-type = ["cdylib"]

[build]
rustflags = ["-L", "node_modules/node-addon-api"]